# assistEval

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_PLAN.md  README.md  Specification.md  coverage.json  coverage.xml  final_qa_validation_report.json  final_test_prompts.txt  missing_implementation.md  mypy.ini  pyproject.toml  qa_validation_report.json
.github/workflows/: benchmark.yml  ci.yml  dependencies.yml  manual-copilot.yml  release.yml
answer_keys/offline/: task1_metrics.json  task2_lines.json  task3_structure.json
bench/: __init__.py  cli.py
bench/adapters/: __init__.py  base.py  chatgpt.py  chatgpt_manual.py  copilot_manual.py
bench/analytics/: __init__.py  insights.py  regression.py  statistics.py  trends.py
bench/core/: __init__.py  report_utils.py  reporting.py  runner.py  scoring.py  utils.py  validators.py
bench/core/evaluators/: __init__.py  base.py  deep_research.py  exec_summary.py  metrics_csv.py  regex_match.py
bench/core/templates/: report_template.md
bench/tests/: __init__.py
bench/tests/_templates/: README.md  offline_metrics.yaml  offline_regex.yaml  offline_summary.yaml  online_research.yaml
bench/tests/offline/: __init__.py  task1_metrics.yaml  task2_ssn_regex.yaml  task3_exec_summary.yaml  test_sample.yaml
bench/tests/online/: __init__.py  deep_research_agentic_ai.yaml
bench/web/: __init__.py  app.py
bench/web/static/: dashboard.js
bench/web/templates/: dashboard.html
configs/: providers.yaml  runmatrix.yaml  weights.default.yaml
docs/: MANUAL_EVALUATION.md
fixtures/csv/: phishing_sample.csv
fixtures/text/: ssn_validation_lines.txt
plans/: mi_stage1_critical_fixes.md  mi_stage2_advanced_features.md  stage10_implementation_plan.md  stage11_implementation_plan.md  stage12_implementation_plan.md  stage12_implementation_prompt.md  stage12_qa_prompt.md  stage13_implementation_plan.md  stage13_implementation_prompt.md  stage13_qa_prompt.md  stage1_implementation_plan.md  stage2_implementation_plan.md  stage3_implementation_plan.md  stage4_implementation_plan.md  stage5_implementation_plan.md  stage6_implementation_plan.md  stage7_implementation_plan.md  stage8_implementation_plan.md  stage9_implementation_plan.md
schemas/: rubric.schema.json  test_case.schema.json
scripts/: bench.py  generate_report.py  make_report.py  run_bench.py  run_qa_validation.py
tests/: __init__.py  test_analytics_insights.py  test_analytics_statistics.py  test_analytics_web_api.py  test_deep_research_evaluator.py  test_evaluation_system.py  test_evaluators.py  test_integration.py  test_qa_automation.py  test_qa_dashboard.py  test_qa_integration.py  test_qa_performance.py  test_qa_security.py  test_qa_statistical_accuracy.py  test_reporting.py  test_scoring.py  test_scoring_integration.py  test_stability_bonus.py  test_utils.py  test_validators.py
